--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.24.0",
-    "mongodb": "^3.3.3"
+    "mongodb": "^3.3.3",
+    "socket.io": "^2.3.0"
   },
   "devDependencies": {
     "eslint": "^6.5.1",
