--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "ba-rest-api",
   "version": "1.0.0",
+  "private": true,
   "description": "REST API for technical test at Les Bons Artisans",
   "main": "app.js",
   "scripts": {
     "test": "npm test",
-    "start": "node app.js",
-    "dev": "nodemon app.js"
+    "start": "node ./bin/www",
+    "dev": "nodemon ./bin/www"
   },
   "repository": {
     "type": "git",
