--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/blvck237/BA-REST-API#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
@@ -31,7 +32,9 @@
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "mongodb": "^3.3.3",
-    "socket.io": "^2.3.0"
+    "mongoose": "^5.7.6",
+    "socket.io": "^2.3.0",
+    "validator": "^11.1.0"
   },
   "devDependencies": {
     "eslint": "^6.5.1",
